# ayon-core

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CNAME  README.md  create_package.py  latest  mkdocs.yml  mkdocs_hooks.py  package.py  pyproject.toml  ruff.toml  setup.cfg  versions.json
client/: pyproject.toml
client/ayon_core/: __init__.py  __main__.py  cli.py  cli_commands.py  host.toml  pype_commands.py  version.py
client/ayon_core/addon/: README.md  __init__.py  base.py  click_wrap.py  interfaces.py  utils.py
client/ayon_core/addon/ui/: process_ready_error.py
client/ayon_core/addons/ayon_applications/: __init__.py  addon.py  constants.py  exceptions.py  manager.py
client/ayon_core/client/: __init__.py  constants.py  conversion_utils.py  entities.py  entity_links.py  operations.py  utils.py
client/ayon_core/client/mongo/: mongo.py  operations.py
client/ayon_core/client/server/: conversion_utils.py  entities.py  operations.py
client/ayon_core/hooks/: pre_add_last_workfile_arg.py  pre_collect_last_published_workfile_data.py  pre_copy_last_published_workfile.py  pre_copy_template_workfile.py  pre_create_extra_workdir_folders.py  pre_filter_farm_environments.py  pre_find_last_published_workfile_representation.py  pre_global_host_data.py  pre_mac_launch.py  pre_new_console_apps.py  pre_non_python_host_launch.py  pre_ocio_hook.py  pre_remove_launcher_paths.py
client/ayon_core/host/: __init__.py  abstract.py  constants.py  dirmap.py  host.py  interfaces.py  typing.py
client/ayon_core/host/interfaces/: __init__.py  exceptions.py  interfaces.py  workfiles.py
client/ayon_core/hosts/aftereffects/: __init__.py  addon.py
client/ayon_core/hosts/batchpublisher/: __init__.py  addon.py  controller.py  publish.py
client/ayon_core/hosts/blender/: addon.py
client/ayon_core/hosts/celaction/: addon.py
client/ayon_core/hosts/flame/: addon.py
client/ayon_core/hosts/fusion/: addon.py
client/ayon_core/hosts/harmony/: __init__.py  addon.py
client/ayon_core/hosts/hiero/: addon.py
client/ayon_core/hosts/houdini/: addon.py
client/ayon_core/hosts/max/: addon.py  lib.py
client/ayon_core/hosts/maya/: addon.py  lib.py
client/ayon_core/hosts/nuke/: addon.py
client/ayon_core/hosts/photoshop/: __init__.py  addon.py  lib.py
client/ayon_core/hosts/resolve/: README.markdown  addon.py  startup.py  utils.py
client/ayon_core/hosts/standalonepublisher/: addon.py
client/ayon_core/hosts/substancepainter/: addon.py
client/ayon_core/hosts/traypublisher/: addon.py  batch_parsing.py  csv_publish.py
client/ayon_core/hosts/tvpaint/: addon.py
client/ayon_core/hosts/unreal/: addon.py  lib.py  ue_workers.py
client/ayon_core/hosts/webpublisher/: addon.py  lib.py  publish_functions.py
client/ayon_core/hosts/zbrush/: __init__.py  addon.py
client/ayon_core/lib/: __init__.py  _compatibility.py  applications.py  attribute_definitions.py  ayon_connection.py  ayon_info.py  cache.py  env_tools.py  events.py  execute.py  file_log_handlers.py  file_transaction.py  icon_definitions.py  local_settings.py  log.py  openpype_version.py  path_templates.py  path_tools.py  plugin_tools.py  profiles_filtering.py  profiling.py  project_backpack.py  pype_info.py  python_2_comp.py  python_module_tools.py  qt_thread_utils.py  terminal.py  threadpool.py  track_changes.py  transcoding.py  usdlib.py  vendor_bin_utils.py
client/ayon_core/modules/: README.md  __init__.py  base.py  click_wrap.py  interfaces.py  launcher_action.py  library_loader_action.py  loader_action.py
client/ayon_core/modules/avalon_apps/: avalon_app.py  rest_api.py
client/ayon_core/modules/clockify/: clockify_api.py  clockify_module.py  widgets.py
client/ayon_core/modules/deadline/: abstract_submit_deadline.py  deadline_module.py
client/ayon_core/modules/job_queue/: __init__.py  addon.py  module.py
client/ayon_core/modules/log_viewer/: log_view_module.py
client/ayon_core/modules/python_console_interpreter/: __init__.py  addon.py  module.py
client/ayon_core/modules/royalrender/: __init__.py  addon.py  api.py  lib.py  royal_render_module.py
client/ayon_core/modules/timers_manager/: idle_threads.py  rest_api.py  timers_manager.py  widget_user_idle.py
client/ayon_core/modules/webserver/: __init__.py  host_console_listener.py  webserver_module.py
client/ayon_core/pipeline/: __init__.py  actions.py  anatomy.py  ayon_uri.py  colorspace.py  compatibility.py  constants.py  context_tools.py  delivery.py  editorial.py  entity_uri.py  legacy_io.py  mongodb.py  openassetio_host_interface.py  plugin_discover.py  plugin_discovery_cache.py  product_base_types.py  product_type_aliases.py  project_folders.py  staging_dir.py  stagingdir.py  structures.py  tempdir.py  template_data.py  thumbnail.py  thumbnails.py  thumbnails_grid.py  usdlib.py  version_start.py
client/ayon_core/pipeline/actions/: __init__.py  inventory.py  launcher.py  loader.py  structures.py  utils.py
client/ayon_core/pipeline/anatomy/: __init__.py  anatomy.py  exceptions.py  roots.py  templates.py
client/ayon_core/pipeline/create/: README.md  __init__.py  base_product_types.py  changes.py  constants.py  context.py  creator_plugins.py  exceptions.py  legacy_create.py  product_name.py  structures.py  subset_name.py  utils.py
client/ayon_core/pipeline/farm/: patterning.py  pyblish_functions.py  pyblish_functions.pyi  (+1 more)
client/ayon_core/plugins/: __init__.py
client/ayon_core/resources/: __init__.py
client/ayon_core/scripts/: non_python_host_launch.py  ocio_wrapper.py  otio_burnin.py  remote_publish.py
client/ayon_core/settings/: __init__.py  ayon_settings.py  constants.py  handlers.py  lib.py  local_settings.md
client/ayon_core/style/: __init__.py  data.json  style.css  style_darwin.css
client/ayon_core/tests/: conftest.py  test_avalon_plugin_presets.py  test_lib_restructuralization.py  test_pyblish_filter.py
client/ayon_core/ui/: __init__.py  ayon_style.json  color_utils.py  data_models.py  image_cache.py  style.py  style_types.py  tester.py  utils.py  variants.py
client/ayon_core/widgets/: README.md  password_dialog.py
(+9599 files in other folders)
