# WARNING: This file is used only for development done on this addon.
# Be aware that dependencies used here might not match the ones used by
# the specific addon bundle set up on the AYON server. This file should
# be used only for local development and CI/CD purposes.

[project]
name = "ayon-core"
version = "1.8.1+dev"
description = "AYON core provides the base building blocks for all other AYON addons and integrations and is responsible for discovery and initialization of other addons."
authors = [
    {name = "Ynput s.r.o.", email = "info@ynput.io"}
]
license = {file = "LICENSE"}
readme = "README.md"
package-mode = false
requires-python = ">=3.9.1,<3.10"

dependencies = [
    "pytest >=8.0.0",
    "pytest-print >=1.0.0",
    "ayon-python-api >=1.0.0",
    "arrow ==0.17.0",
    "ruff >=0.11.7",
    "pre-commit >=4.0.0",
    "codespell >=2.2.6",
    "semver >=3.0.2",
    "mypy >=1.14.0",
    "mock >=5.0.0",
    "nxtools >=1.6.0",
    "attrs >=25.0.0",
    "pyblish-base >=1.8.7",
    "clique >=2.0.0",
    "opentimelineio ==0.17.0",
    "speedcopy >=2.1.0",
    "qtpy >=2.4.3",
    "pyside6 >=6.5.2",
    "pytest-ayon @ git+https://github.com/ynput/pytest-ayon.git"
]

[tool.codespell]
# Ignore words that are not in the dictionary.
ignore-words-list = "ayon,ynput,parms,parm,hda,developpement"

# Ignore lines that contain this regex. This is hack for missing inline ignore.
# Remove with next codespell release (>2.2.6)
ignore-regex = ".*codespell:ignore.*"

skip = "./.*,./package/*,*/client/ayon_core/vendor/*"
count = true
quiet-level = 3

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/client"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "-ra -q"
testpaths = [
    "client/ayon_core/tests"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "api: API tests",
    "cli: CLI tests",
    "slow: Slow tests",
    "server: Tests that require a running AYON server",
]
