[project]
name="core"
description="AYON core addon."

[tool.poetry.dependencies]
python = ">=3.9.1,<3.10"
clique = "1.6.*"
jsonschema = "^2.6.0"
pyblish-base = "^1.8.11"
speedcopy = "^2.1"
six = "^1.15"
qtawesome = "0.7.3"

[ayon.runtimeDependencies]
aiohttp-middlewares = "^2.0.0"
Click = "^8"
OpenTimelineIO = "0.16.0"
opencolorio = "2.2.1"
Pillow = "9.5.0"
websocket-client = ">=0.40.0,<2"
