[project]
name="core"
description="AYON core addon."

[tool.poetry.dependencies]
markdown = "^3.4.1"
clique = "1.6.*"
jsonschema = "^2.6.0"
pyblish-base = "^1.8.11"
pygments = "^2.18.0"
speedcopy = "^2.1"
six = "^1.15"
qtawesome = "0.7.3"

[ayon.runtimeDependencies]
aiohttp-middlewares = "^2.0.0"
Click = "^8"
OpenTimelineIO = "0.16.0"
opencolorio = "^2.3.2,<2.4.0"
Pillow = "9.5.0"
websocket-client = ">=0.40.0,<2"

[ayon.runtimeDependencies.darwin]
pyobjc-core = "^11.1"
